# mcp_ui

./: .eslintignore  .gitmodules  CHANGELOG.md  IMPLEMENTATION-SUMMARY.md  README.md  SECURITY.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test_example.rb  tsconfig.base.json
.github/: dependabot.yml
docs/: ARCHITECTURE-AI2GO.md  INTEGRATION-NOTES.md  PR-TRIAGE.md  SPEECH-PERSISTENCE-IMPLEMENTATION.md
services/orchestrator/: .env.example  Dockerfile  README.md  demo_features.py  pyproject.toml  validate_implementation.py
services/orchestrator/data/: orchestrator.db
services/orchestrator/src/orchestrator/: __init__.py  config.py
services/orchestrator/src/orchestrator/api/: main.py
services/orchestrator/src/orchestrator/core/: chat.py
services/orchestrator/src/orchestrator/memory/: __init__.py  database.py  embeddings.py  models.py  retrieval.py  store.py  tools.py
services/orchestrator/src/orchestrator/persistence/: __init__.py  models.py
services/orchestrator/src/orchestrator/providers/: base.py  gemini_stub.py  openai_provider.py
services/orchestrator/src/orchestrator/speech/: __init__.py  base.py  google_stub.py  openai_provider.py  openai_speech.py  tools.py
services/orchestrator/src/orchestrator/tools/: base.py  fs_tools.py  git_tools.py  memory_tools.py  speech_tools.py  terminal_tool.py
services/orchestrator/tests/: test_api_endpoints.py  test_fs_tool.py  test_memory.py  test_patch_tool.py  test_persistence.py  test_speech.py  test_speech_integration.py  test_speech_provider.py  test_tools_endpoint.py
(+99 files in other folders)
