[project]
name = "orchestrator"
version = "0.1.0"
description = "Agent Orchestrator service (chat, tools, providers, SSE)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn>=0.30.5",
  "httpx>=0.27.2",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "gitpython>=3.1.43",
  "aiofiles>=23.2.1",
  "openai>=1.30.0",
  "typing-extensions>=4.12.0",
  "orjson>=3.10.7"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.4.5",
  "mypy>=1.10.0",
  "anyio>=4.4.0"
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
select = ["E","F","I","TCH"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.mypy]
python_version = "3.11"
strict = true
